# workcell_simulator

keti_workcell_control/: CMakeLists.txt  package.xml
keti_workcell_control/include/: mainwindow.h  robotcontrol.h  rvizclass.h
keti_workcell_control/launch/: run.launch
keti_workcell_control/src/: main.cpp  mainwindow.cpp  robotcontrol.cpp  rvizclass.cpp
keti_workcell_control/ui/: mainwindow.ui  mainwindow.ui.autosave
keti_workcell_control2/: CMakeLists.txt  layout.xml  package.xml
keti_workcell_control2/build-setting_ui-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_qclicklabel.cpp  qrc_resources.cpp  ui_mainwindow.h
keti_workcell_control2/build-setting_ui-Desktop_Qt_5_12_12_GCC_64bit-Debug/: Makefile  layout.xml  layout2.xml  moc_mainwindow.cpp  moc_qclicklabel.cpp  moc_settingbutton.cpp  moc_settinglayout.cpp  qrc_resources.cpp  setting_ui  ui_mainwindow.h  ui_settingbutton.h  ui_settinglayout.h
keti_workcell_control2/include/: mainwindow.h  settingclass.h
keti_workcell_control2/launch/: run.launch
keti_workcell_control2/pugixml/lib/: libpugixml.so.1.14
keti_workcell_control2/resources/: resources.qrc
keti_workcell_control2/setting_ui/: layout.xml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qclicklabel.h  setting_ui.pro
keti_workcell_control2/src/: main.cpp  mainwindow.cpp  qclicklabel.cpp  robotcontrol.cpp  rvizclass.cpp  settingclass.cpp
keti_workcell_control2/ui/: mainwindow.ui  settingclass.ui
keti_workcell_description/: CMakeLists.txt  package.xml  urdf.rviz
keti_workcell_description/launch/: display.launch
keti_workcell_description/meshes/: ARF_jig.STL  ARF_jig2.STL  ARF_slider2.STL  ARF_slider_base1.STL  ATC.STL  DENSO_jig.STL  KRVG.STL  add_axis_jig1.STL  add_axis_jig2.STL  cam_jig.STL  denso_tool_changer.STL  grip_adapter.STL  koras_2f.STL  obj1.STL  obj2.STL  slider.STL  slider_base.STL  tool_changer.STL  tooltip.STL  zimmer.STL
keti_workcell_description/meshes/DENSO/: d_link0.STL  d_link1.STL  d_link2.STL  d_link3.STL
keti_workcell_description/meshes/UR10e/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
keti_workcell_description/urdf/: base_ARF.urdf  base_ARF_test.urdf  base_DENSO.urdf  base_DENSO_test.urdf  base_ETC.urdf  base_ETC_test copy.urdf  base_UR.urdf  base_UR_1.urdf  base_VISION.urdf  keti_workcell_description.urdf
keti_workcell_urdf_translator/: .gitignore  CMakeLists.txt  package.xml
keti_workcell_urdf_translator/include/: mainwindow.h  pugiconfig.hpp  pugixml.hpp
keti_workcell_urdf_translator/launch/: translator.launch
keti_workcell_urdf_translator/lib/: libpugixml.so.1
keti_workcell_urdf_translator/src/: mainwindow.cpp
keti_workcell_urdf_translator/ui/: mainwindow.ui
keti_workcell_urdf_translator/xml/: base_ARF.xml  base_DENSO.xml  base_ETC.xml  base_UR.xml  base_VISION.xml
